# obj_detection

obj_detection_interfaces/: CMakeLists.txt  package.xml
obj_detection_interfaces/msg/: Detection.msg  DetectionArray.msg  Localization.msg  LocalizationArray.msg
obj_detection_node/: package.xml  setup.cfg  setup.py
obj_detection_node/launch/: launch.yaml  localization.launch.yaml  node.launch.xml
obj_detection_node/obj_detection_node/: publish_dectection.py  publish_localization.py
obj_detection_node/util/: util.py
obj_detection_pub/: package.xml  setup.py
obj_detection_pub/obj_detection_pub/: __init__.py  publish_dectection.py
